corrects modal js to assign overflow hidden to body when modal is opened

--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -5,6 +5,9 @@ body {
   font-family: $primary-font;
   letter-spacing: 0.03em;
 }
+body.modal-open {
+  overflow: hidden;
+}
 // h
 h1,
 h2,
